--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="intro-text">
                         <span class="name">Hey there! I am Yourname!</span>
                         <hr class="star-light">
-                        <span class="skills">Add your skills here. Eg: <br/> Web Developer - Graphic Artist</span>
+                        <span class="skills">Add your skills here. Eg: <br/> Developer C/C++ Python et web - Graphic Artist</span>
                     </div>
                 </div>
             </div>
