--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Hey there! I am Yourname!</span>
+                        <span class="name">Hey there! I am Super_Code774!</span>
                         <hr class="star-light">
-                        <span class="skills">Add your skills here. Eg: <br/> Developer C/C++ Python et web - Graphic Artist</span>
+                        <span class="skills"> ME : <br/> Developer C/C++ Python et web - Graphic Artist</span>
                     </div>
                 </div>
             </div>
@@ -164,10 +164,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Write a paragraph about who you are, where you're from, etc.</p>
+                    <p>I’m Super_Code774, a passionate and versatile developer with expertise in C++/C, Python, Swift, and web development. My journey in coding began with a curiosity for how things work and has evolved into a full-fledged career where I get to create, innovate, and solve complex problems.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Write a short paragraph about your hobbies and interests.</p>
+                    <p>...</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <!-- <a href="#" class="btn btn-lg btn-outline">
