--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Yourname</h3>
-                        <p><a href="http://startbootstrap.com">Yourname</a>.</p>
+                        <h3>Super-Code774</h3>
+                        <p><a href="https://github.com/Super-Code774/">Super-Code774</a>.</p>
                     </div>
                 </div>
             </div>
