--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; Super-774 2024
                     </div>
                 </div>
             </div>
