--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="intro-text">
                         <span class="name">Hey there! I am Super_Code774!</span>
                         <hr class="star-light">
-                        <span class="skills"> ME : <br/> Developer C/C++ Python et web - Graphic Artist</span>
+                        <span class="skills"> ME : <br/> Developer C/C++ Python et web ---</span>
                     </div>
                 </div>
             </div>
