--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
                             <p>Malware Blocklists
 This repository contains a comprehensive collection of blocklists intended to identify and block malicious domains, including malware, ransomware, phishing, spyware, and botnets. These lists are ideal for use with DNS filtering tools such as Pi-Hole, AdGuard Home, and Blocky.
-<a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+<a href="https://">Flat Icons</a>...</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Super_Code774</a>
